[project]
name = "tensor-puzzles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chalk-diagrams",
    "hypothesis>=6.135.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pytest>=8.4.0",
    "torchtyping>=0.1.5",
]

[tool.uv.sources]
chalk-diagrams = { git = "https://github.com/chalk-diagrams/chalk" }
